// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/proto-files/proto-files";
option java_multiple_files = true;
option java_package = "io.grpc.examples.proto-files";
option java_outer_classname = "HelloWorldProto";

package issuer;

// The greeting service definition.
service Issuer {
  // Sends a greeting
  rpc RequestCredential (CredentialRequest) returns (CredentialReply) {}
  rpc ReqCredIdCard (IdCardRequest) returns (IdCardReply) {}
  rpc ReqCredDlCard (DlCardRequest) returns (DlCardReply) {}
  rpc ReqCredRentalCarAgreement (RentalCarAgreementRequest) returns (RentalCarAgreementReply) {}
  rpc RentalCarControl (RentalCarControlRequest) returns (RentalCarControlReply) {}
}

// The request message containing the vcClaimJwt.
message CredentialRequest {
  string vcClaimJwt = 1;
}

// The response message containing the vcJwt
message CredentialReply {
  string vcJwt = 1;
}

// The request message containing the did.
message IdCardRequest {
  string did = 1;
}

// The response message containing the eIdVcJwt
message IdCardReply {
  string eIdVcJwt = 1;
}

// The request message containing the eIdVcJwt.
message DlCardRequest {
  string eIdVcJwt = 1;
}

// The response message containing the driver's license
message DlCardReply {
  bool valid = 1;
  string result = 2;
  string eDlVcJwt = 3;
}

// The request message containing the driver's license.
message RentalCarAgreementRequest {
  string eDlVcJwt = 1;
}

// The response message containing the rentalCarVcJwt
message RentalCarAgreementReply {
  bool valid = 1;
  string result = 2;
  string rentalCarAgreementVcJwt = 3;
}

// The request message containing the rentalCarVcJwt.
message RentalCarControlRequest {
  string rentalCarAgreementVcJwt = 1;
}

// The response message containing the result
message RentalCarControlReply {
  bool valid = 1;
  string result = 2;
}
